# vibe-hotkey-windows

./: .gitignore  README.md  config.json  pyproject.toml
src/: consoleless.pyw  cuda_utils.py  loader_icon_thread.py  main.py  model_loader.py
